harbor/harbor-trivy_NetworkPolicy_harbor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: trivy
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: harbor
    app.kubernetes.io/version: 2.10.0
    helm.sh/chart: harbor-20.1.2
  name: harbor-trivy
  namespace: harbor
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 8080
    - port: null
  podSelector:
    matchLabels:
      app.kubernetes.io/component: trivy
      app.kubernetes.io/instance: harbor
      app.kubernetes.io/name: harbor
  policyTypes:
  - Ingress
  - Egress
